-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 3.2.0
-
Fix Version/s: Impala 3.2.0
-
Component/s: Backend
-
Labels:None
-
Target Version:
-
Epic Color:ghx-label-9
If a DiskIo operation times out, it generates a TErrorCode::THREAD_POOL_TASK_TIMED_OUT or TErrorCode::THREAD_POOL_SUBMIT_FAILED error codes. These call GetDescription() to get DiskIo related context. That information should include the hostname where the error occurred to allow tracking down a problematic host that is seeing DiskIo timeouts.